--- a/src/routes/theme/page.mdx
+++ b/src/routes/theme/page.mdx
@@ -1,7 +1,7 @@
 import { Screenshot } from "@/mdxui/screenshot"
 
 import { Callout } from "@/mdxui"
-import titleSuffixImage from "@/public/logo.png"
+import titleSuffixImage from "/logo.png"
 
 # Theme Configuration
 
